fix(moderation): align queue table

--- a/src/styles/prototypes/dashboard/layout.css
+++ b/src/styles/prototypes/dashboard/layout.css
@@ -2742,21 +2742,17 @@ table.config-details {
     white-space: nowrap;
   }
 
-  & .moderation-table__table-wrapper {
-    margin: 0 calc(-1 * var(--m__widget-padding));
-  }
-
   & table {
     min-width: 48rem;
     table-layout: fixed;
   }
 
   & .moderation-table__col-conversation {
-    width: 38%;
+    width: 36%;
   }
 
   & .moderation-table__col-pattern {
-    width: 25%;
+    width: 23%;
   }
 
   & .moderation-table__col-detection {
@@ -2767,23 +2763,12 @@ table.config-details {
     width: 10%;
   }
 
-  & th:first-child,
-  & td:first-child {
-    padding-left: var(--m__widget-padding);
+  & .moderation-table__col-actions {
+    width: 4%;
   }
 
-  & th:last-child,
-  & td:last-child {
-    padding-right: var(--m__widget-padding);
-  }
-
-  & tbody tr {
-    transition: background-color var(--m__duration-base) var(--m__easing-base);
-  }
-
-  & tbody tr:hover {
-    background-color: color-mix(in srgb, var(--m__bg-accent-hover) 6%, transparent);
-    transition-duration: var(--m__duration-instant);
+  & .moderation-table__row-actions > div {
+    align-items: flex-start;
   }
 
   & .moderation-table__conversation-link,
